fixed style issues

--- a/about.html
+++ b/about.html
@@ -4,6 +4,8 @@
     <title>
       Homeless Adventure!
     </title>
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
       <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
@@ -12,8 +14,7 @@
 
     </div></li>
     <li><a href="index.html">Home Screen</a></li>
-    <li><a href="AccountInfo.html"><i class="material-icons"></i>Donate</a></li>
-    <li><a href="about.html">About us</a></li>
+    <li><a href="Donate.html"><i class="material-icons"></i>Donate</a></li>
     </ul>
     <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons biggericon">menu</i></a>
     <h1>What We Do</h1>
@@ -21,11 +22,16 @@
     <h1>About the Game</h1>
       <p> We take charity to the next level! Haha, get it, next level, this is a game, hahahaha PUNS! Anyways,this game should teach you about how hard the life of a homeless person is. It will take you through the life of a homeless person. When you beat the game, you might feel sorry for them and should go to our donate page and donate to one of the shelters listed there. </p>
         <p> This is a 'choose your own adventure' style game with many differant paths. You have to try to get the player, 'Tim,' to the homeless shelter at the end of the game. There will be risk, danger, and adventure. One thing is for sure, you might never have the same path twice.</p>
-      <a href="AccountInfo.html">
+      <a href="Donate.html">
         <button id='donate'>Donate to your local shelter</button>
       </a>
       <a href="index.html">
         <button id='back'>back</button>
       </a>
+
+      <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
+      <script> $(".button-collapse").sideNav(); </script>
+
   </body>
   </html>
