--- a/AccountInfo.html
+++ b/AccountInfo.html
@@ -3,8 +3,11 @@
 <head>
  <link href="stylepage.css" rel="stylesheet">
 <title> Account Info</title>
+<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
 </head>
 <body>
+
   <ul id="slide-out" class="side-nav">
   <li><div class="userView">
 
@@ -16,21 +19,14 @@
   <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons biggericon">menu</i></a>
   <h1>You can go to the donation choices from here. We have the current page incase you want to return and play the game again.</h1>
 
+        <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
+        <script> $(".button-collapse").sideNav(); </script>
 <a href="Donate.html">
   <button id='donate'>Donate to your local shelter</button>
 </a>
 
-  <form action="/charge" method="POST">
-    <script
-      src="https://checkout.stripe.com/checkout.js"
-      class="stripe-button"
-      data-key="pk_test_EmBf9j8JP8hO4iMIpNJmApGe"
-      data-image="/square-image.png"
-      data-name="CGI Payment"
-      data-description="2 widgets ($20.00)"
-      data-amount="500">
-    </script>
-  </form>
+
 
 
   <a href="index.html">
