--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <a href="#!name"><span class="white-text name">John Doe</span></a>
       <a href="#!email"><span class="white-text email">jdandturk@gmail.com</span></a>
     </div></li>
-    <li><a href="AccountInfo.html"><i class="material-icons"></i>Donate</a></li>
+    <li><a href="Donate.html"><i class="material-icons"></i>Donate</a></li>
     <li><a href="about.html">About us</a></li>
     </ul>
     <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons biggericon">menu</i></a>
